feat: add swagger docs for AttendanceController
