# app/Http/Controllers/Controller.php
@@ -8,10 +8,6 @@ use OpenApi\Attributes as OA;
     version: '1.0.0',
     title: 'Sistem Absensi API',
     description: 'API untuk sistem absensi mahasiswa/karyawan menggunakan Laravel tanpa database.',
-    contact: new OA\Contact(
-        name: 'Dionisius Seraf Saputra',
-        email: 'readsnu@absensi.com'
-    )
 )]
 #[OA\Server(
     url: 'http://127.0.0.1:8000',
